# QA_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
project/backend/app/: main.py
project/backend/app/core/: config.py  llm.py  runtime_config.py  session_store.py
project/backend/app/graph/: builder.py  edges.py  nodes.py  state.py
project/backend/app/routers/: chat.py  config.py  session.py  upload.py
project/backend/app/schemas/: request.py  response.py
project/backend/app/services/: chunking.py  dedupe.py  hybrid_retrieval.py  image_assets.py  image_retrieval.py  lexical_retrieval.py  media_store.py  parser.py  qa.py  semantic_retrieval.py
project/frontend/: api_client.py  app.py  utils.py
project/frontend/components/: browser_cleanup.py  llm_controls.py  retrieval_controls.py
project/tests/: conftest.py  test_api_smoke.py  test_browser_exit_cleanup.py  test_citation_limits.py  test_clear_session.py  test_duplicate_detection.py  test_graph_flow.py  test_hybrid_retrieval.py  test_lexical_retrieval.py  test_llm_settings_validation.py  test_parser.py  test_runtime_config_endpoint.py
