[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfRAG"
version = "0.1.0"
description = "Vectorless multi-PDF QA system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.36",
    "requests>=2.32",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pypdf>=5.0",
    "langchain>=0.2",
    "langgraph>=0.2",
    "langchain-openrouter>=0.1",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    "faiss-cpu==1.8.0; sys_platform == 'darwin'",
    "faiss-cpu>=1.8; sys_platform != 'darwin'",
    "rank-bm25>=0.2",
    "reportlab>=4.2",
    "pytest>=8.0",
]

[tool.uv]
package = false
