[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfRAG"
version = "0.1.0"
description = "Vectorless multi-PDF QA system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.36",
    "requests>=2.32",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pypdf>=5.0",
    "langchain>=0.2",
    "langgraph>=0.2",
    "langchain-openrouter>=0.1",
    "langchain-community>=0.2",
    "langchain-text-splitters>=0.2",
    # macOS: keep legacy pin for older Python versions to match available wheels,
    # but allow newer Python (>=3.14) on mac to install a newer faiss-cpu that
    # provides wheels for the newer Python ABI. Do not change non-mac cases.
    "faiss-cpu==1.8.0; sys_platform == 'darwin' and python_version < '3.14'",
    # Restrict darwin + Python >=3.14 to arm64 only where compatible macOS wheels exist.
    "faiss-cpu>=1.11; sys_platform == 'darwin' and python_version >= '3.14' and platform_machine == 'arm64'",
    # Only install faiss-cpu on non-mac platforms via the default (manylinux) wheels.
    "faiss-cpu>=1.11; sys_platform != 'darwin'",
    "rank-bm25>=0.2",
    "reportlab>=4.2",
    "pytest>=8.0",
]

[tool.uv]
package = false
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
